--- a/src/app/components/create-todo/create-todo.component.html
+++ b/src/app/components/create-todo/create-todo.component.html
@@ -1,27 +1,35 @@
-<div class="row">
+<div class="row mt-3">
     <div class="col-6  m-auto">
-        <h3>Create todo</h3>
-        <form (ngSubmit)="onSubmit()" #todoForm="ngForm">
+        <h3>Create Todo</h3>
+        <form (ngSubmit)="onCreate()" #todoForm="ngForm">
+            <div class="form-group mt-3">
+                <label for="todoDescription">Name</label>
+                <input type="text" class="form-control" id="todoName" placeholder="Enter the todo name"
+                    [(ngModel)]="todo.name" name="todoName" required #name="ngModel">
+                <ul *ngIf="!name.valid && name.touched" class="text-danger">
+                    <li>Field is required</li>
+                </ul>
+            </div>
             <div class="form-group mt-3">
                 <label for="todoDescription">Description</label>
-                <input type="text" class="form-control" id="todoDescription" placeholder="Enter the description"
-                    [(ngModel)]="todo.description" name="description" required #description="ngModel">
+                <textarea rows="3" class="form-control" id="todoDescription" placeholder="Enter the description"
+                    [(ngModel)]="todo.description" name="description" required #description="ngModel"></textarea>
                 <ul *ngIf="!description.valid && description.touched" class="text-danger">
+                    <li>Field is required</li>
+                </ul>
+            </div>
+            <div class="form-group mt-3">
+                <label for="todoTargetDate">Target Date</label>
+                <input type="date" class="form-control" id="todoTargetDate" placeholder="Enter the deadline"
+                    [ngModel]="todo.targetDate | date:'yyyy-MM-dd'" (ngModelChange)="todo.targetDate=$event"
+                    name="todoDate" required #todoDate="ngModel">
+                <ul *ngIf="!todoDate.valid && todoDate.touched" class="text-danger">
                     <li>Field is required</li>
                 </ul>
             </div>
             <div class="form-check mt-3">
                 <input type="checkbox" class="form-check-input" id="todoDone" [(ngModel)]="todo.done" name="todoDone">
                 <label class="form-check-label" for="todoDone">Mark as done</label>
-            </div>
-            <div class="form-group mt-3">
-                <label for="todoDeadline">Deadline</label>
-                <input type="date" class="form-control" id="todoDeadline" placeholder="Enter the deadline"
-                    [ngModel]="todo.deadline | date:'yyyy-MM-dd'" (ngModelChange)="todo.deadline=$event" name="todoDate"
-                    required #todoDate="ngModel">
-                <ul *ngIf="!todoDate.valid && todoDate.touched" class="text-danger">
-                    <li>Field is required</li>
-                </ul>
             </div>
             <button type="submit" [disabled]="!todoForm.form.valid" class="btn btn-primary mt-3">Create</button>
         </form>
