--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,8 +6,6 @@
                 <label for="exampleInputEmail1">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                     placeholder="Enter email" [(ngModel)]="email" name="email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                    else.</small>
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
@@ -16,7 +14,7 @@
             </div>
             <div class="form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                <label class="form-check-label" for="exampleCheck1">Remember me</label>
             </div>
             <button type="click" (click)="onLogin()" class="btn btn-primary">Submit</button>
         </form>
