--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,22 +1,32 @@
 <div class="row">
     <div class="col-4 m-auto mt-5">
         <p *ngIf="errMsg" class="alert alert-danger">{{errMsg}}</p>
+        <p *ngIf="showSuccessfulResetPasswordMsg == 1" class="alert alert-info">
+            {{msg}}
+        </p>
         <form>
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                     placeholder="Enter email" [(ngModel)]="email" name="email">
             </div>
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Please remember my username</label>
+            </div>
+            <br>
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"
                     [(ngModel)]="password" name="password">
             </div>
-            <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Remember me</label>
-            </div>
-            <button type="click" (click)="onLogin()" class="btn btn-primary">Submit</button>
+            <br>
+
+            <button type="submit" (click)="onLogin()" class="btn btn-primary">Login</button>
+
         </form>
+        <hr>
+        <p>Forgot your password?</p>
+        <button type="button" (click)="onRequestResetPassword()" class="btn btn-warning">Reset Password</button>
     </div>
 </div>
