--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -23,7 +23,7 @@
             <a class="nav-link" routerLink="/login">Login</a>
           </li>
           <li class="nav-item" *ngIf="authService.loggedIn()">
-            <a class="nav-link" routerLink="/login" (click)="onLogout()">Logout</a>
+            <a class="nav-link" routerLink="/" (click)="onLogout()">Logout</a>
           </li>
         </ul>
       </div>
