--- a/src/app/components/edit-user/edit-user.component.html
+++ b/src/app/components/edit-user/edit-user.component.html
@@ -1,24 +1,38 @@
 <div class="row mt-5">
-    <div class="col-10 m-auto">
+    <div class="col-6 m-auto">
         <app-spinner *ngIf="loading"></app-spinner>
 
         <form #f="ngForm" (ngSubmit)="onUserEdit()">
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" disabled>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" disabled
+                    [(ngModel)]="user.email" name="email">
             </div>
+            <br>
             <div class="form-group">
                 <label for="exampleInputPassword1">Created At</label>
-                <input type="date" class="form-control" id="createdAtInput" disabled>
+                <input type="date" class="form-control" id="createdAtInput" disabled
+                    [ngModel]="user.createdAt | date:'yyyy-MM-dd'" name="createdAt">
             </div>
+            <br>
             <div class="form-group">
                 <label for="exampleInputPassword1">Verified At</label>
-                <input type="date" class="form-control" id="verifiedAtInput" disabled>
+                <input type="date" class="form-control" id="verifiedAtInput" disabled
+                    [ngModel]="user.verifiedAt | date:'yyyy-MM-dd'" name="verifiedAt">
             </div>
+            <br>
+            <div class="form-group">
+                <label for="internalNote">Internal Notes</label>
+                <textarea rows="3" type="text" class="form-control" id="internalNote" [(ngModel)]="user.internalNote"
+                name="internalNote"></textarea>
+            </div>
+            <br>
             <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="enabledCheckBox">
-                <label class="form-check-label" for="enabledCheckBox" [(ngModel)]="enabled" name="enabled">Enabled</label>
+                <input type="checkbox" class="form-check-input" id="enabledCheckBox" [(ngModel)]="user.enabled"
+                    name="enabled">
+                <label class="form-check-label" for="enabledCheckBox">Enabled</label>
             </div>
+            <br>
             <button type="submit" class="btn btn-primary">Update</button>
         </form>
     </div>
