--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -27,7 +27,7 @@
                         <i *ngIf="user.enabled; else notEnabled" class="fa fa-check text-success"
                             aria-hidden="true"></i>
                         <ng-template #notEnabled>
-                            <i class="fas fa-times text-danger" aria-hidden="true"></i>
+                            <i class="fa fa-times text-danger" aria-hidden="true"></i>
                         </ng-template>
                     </td>
                     <td>{{user.createdAt | date}}</td>
@@ -36,7 +36,7 @@
                     <td>
                         <span class="m-2">
                             <i class="fa fa-pencil text-warning" aria-hidden="true" style="cursor: pointer"
-                                (click)="onUserEdit()"></i>
+                                (click)="onUserEdit(user.id)"></i>
                         </span>
                     </td>
                 </tr>
