--- a/src/app/components/request-reset-password/request-reset-password.component.html
+++ b/src/app/components/request-reset-password/request-reset-password.component.html
@@ -10,11 +10,11 @@
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-            placeholder="Enter email" required email [(ngModel)]="email" name="email" #emailInput="ngModel">
+            placeholder="Enter email" required email [(ngModel)]="username" name="username" #emailInput="ngModel">
         </div>
         <ul *ngIf="!emailInput.valid && emailInput.touched" class="text-danger">
           <li *ngIf="emailInput.errors.required">Email field is required.</li>
-          <li *ngIf="emailInput.errors.email">Email format is required.</li>
+          <li *ngIf="emailInput.errors.username">Email format is required.</li>
         </ul>
         <button type="submit" [disabled]="!f.valid" class="btn btn-primary mt-3">Send</button>
       </form>
