--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,14 +1,14 @@
 <div class="row">
     <div class="col-4 m-auto mt-5">
         <p *ngIf="errMsg" class="alert alert-danger">{{errMsg}}</p>
-        <p *ngIf="showSuccessfulResetPasswordMsg == 1" class="alert alert-info">
+        <p *ngIf="showSuccessfulResetPasswordMsg == 1" class="alert alert-success">
             {{msg}}
         </p>
         <form>
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                    placeholder="Enter email" [(ngModel)]="email" name="email">
+                    placeholder="Enter email" [(ngModel)]="username" name="email">
             </div>
             <div class="form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
