changes for header and footer components

--- a/src/app/components/sent-verify-email/sent-verify-email.component.html
+++ b/src/app/components/sent-verify-email/sent-verify-email.component.html
@@ -2,9 +2,7 @@
     <div class="col-9 text-center m-auto">
         <p>Congrats! Your account has been created.</p>
         <p>We just sent an email to <strong>{{username || "your email"}}</strong>, please check it out, 
-            and click on the verification link.</p>
-        <p>Then you can login here.</p>
+            and click on the verification link to verify tour email and to be able to login.</p>
         <hr>
-        <a class="btn btn-success" routerLink="/login">Login</a>
     </div>
 </div>
