--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,46 +1,20 @@
 <div class="row mt-5">
-    <div class="col-3 m-auto" *ngIf="!userCreated">
-        <div class="text-center">
-            <h5>Welcome</h5>
-            <p>Sign Up to keep track of your todo list</p>
-        </div>
+    <div class="col-4 text-center m-auto">
+        <h2>Welcome</h2>
         <br>
-        <form #signUpForm="ngForm" (ngSubmit)="onSignUp()" [appMatchPassword]="['password', 'confirmPassword']">
-            <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                    placeholder="Enter email" [(ngModel)]="username" #emailInput="ngModel" name="username" required email>
-            </div>
-            <ul *ngIf="!emailInput.valid && emailInput.touched" class="text-danger">
-                <li *ngIf="emailInput.errors.required">Email field is required.</li>
-                <li *ngIf="emailInput.errors.username">Email format is required.</li>
-            </ul>
-            <br>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="passwordInput" placeholder="Password" required
-                    [(ngModel)]="password" #passwordInput="ngModel" name="password">
-            </div>
-            <ul *ngIf="!passwordInput.valid && passwordInput.touched" class="text-danger">
-                <li>Password is required.</li>
-            </ul>
-            <br>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Confirm Password</label>
-                <input type="password" class="form-control" id="confirmPasswordInput" placeholder="Confirm Password"
-                    required [(ngModel)]="confirmPassword" #confirmPasswordInput="ngModel" name="confirmPassword">
-            </div>
-            <ul *ngIf="!confirmPasswordInput.valid && confirmPasswordInput.touched" class="text-danger">
-                <li *ngIf="confirmPasswordInput.errors.required">Password confirmation field is required.</li>
-                <li *ngIf="confirmPasswordInput.errors.passwordMismatch">Passwords do not match.</li>
-            </ul>
-            <br>
-            <button type="submit" class="btn btn-primary" [disabled]="signUpForm.form.invalid">Sign Up</button>
-        </form>
+        <h4>Keep track of your todo tasks</h4>
+        <hr>
     </div>
-    <div class="col-6 m-auto" *ngIf="userCreated">
-        <div class="text-center">
-            <app-verify-email [email]="email"></app-verify-email>
-        </div>
+</div>
+<div class="row">
+    <div class="col-4 text-center m-auto">
+        <p>New user?</p>
+        <a class="btn btn-sm btn-primary" routerLink="/signup">Sign up</a>
+        <br><br>
+        <p>Already have an account?</p>
+        <a class="btn btn-sm btn-success" routerLink="/login">Login</a>
+        <br><br>
+        <p>Forgot password?</p>
+        <a class="btn btn-sm btn-warning" routerLink="/request-reset-password">Reset password</a>
     </div>
 </div>
