--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,7 @@
 <div class="row">
-    <div class="col-4 m-auto mt-5">
+    <div class="col-3 m-auto mt-5">
+        <h3 class="mb-5 text-muted">Login Form</h3>
+
         <p *ngIf="errMsg" class="alert alert-danger">{{errMsg}}</p>
         <p *ngIf="showSuccessfulResetPasswordMsg == 1" class="alert alert-success">
             {{msg}}
@@ -12,7 +14,7 @@
             </div>
             <div class="form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Please remember my username</label>
+                <label class="form-check-label" for="exampleCheck1">Remember me</label>
             </div>
             <br>
             <div class="form-group">
@@ -22,11 +24,11 @@
             </div>
             <br>
 
-            <button type="submit" (click)="onLogin()" class="btn btn-primary">Login</button>
+            <button type="submit" (click)="onLogin()" class="btn btn-sm btn-success">Login</button>
 
         </form>
         <hr>
         <p>Forgot your password?</p>
-        <button type="button" (click)="onRequestResetPassword()" class="btn btn-warning">Reset Password</button>
+        <button type="button" (click)="onRequestResetPassword()" class="btn btn-sm btn-warning">Reset Password</button>
     </div>
 </div>
