password length chacking

--- a/src/app/components/request-reset-password/request-reset-password.component.html
+++ b/src/app/components/request-reset-password/request-reset-password.component.html
@@ -16,7 +16,7 @@
           <li *ngIf="emailInput.errors.required">Email field is required.</li>
           <li *ngIf="emailInput.errors.username">Email format is required.</li>
         </ul>
-        <button type="submit" [disabled]="!f.valid" class="btn btn-primary mt-3">Send</button>
+        <button type="submit" [disabled]="!f.valid" class="btn btn-sm btn-primary mt-3">Send</button>
       </form>
     </div>
   </ng-template>
