--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -22,7 +22,7 @@
                 <li *ngIf="confirmPasswordInput.errors.passwordMismatch">Passwords do not match.</li>
             </ul>
             <br>
-            <button type="submit" class="btn btn-primary" [disabled]="f.form.invalid">Submit</button>
+            <button type="submit" class="btn btn-sm btn-primary" [disabled]="f.form.invalid">Submit</button>
         </form>
     </div>
 </div>
