--- a/src/app/components/spinner/spinner.component.html
+++ b/src/app/components/spinner/spinner.component.html
@@ -1,1 +1,3 @@
-<ngx-spinner></ngx-spinner>
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.5)">
+    <p style="color: white" > Loading... </p>
+</ngx-spinner>
