--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -22,7 +22,7 @@
             <tbody>
                 <tr *ngFor="let user of users; let userNumber = index ">
                     <th scope="row">{{userNumber + 1}}</th>
-                    <td>{{user.email}}</td>
+                    <td>{{user.username}}</td>
                     <td>
                         <i *ngIf="user.enabled; else notEnabled" class="fa fa-check text-success"
                             aria-hidden="true"></i>
