--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -1,1 +1,11 @@
-<p>error works!</p>
+<div class="row mt-5">
+    <div class="col text-center">
+        <h3 class="text-muted">
+            Page not found!
+        </h3>
+        <br><br>
+        <a class="btn btn-success" routerLink="/">
+            Back to Home Page
+        </a>
+    </div>
+</div>
