--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -29,7 +29,7 @@
                             <a class="nav-link" routerLink="/todos" *ngIf="authService.isLoggedIn()">Todos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" routerLink="/users" *ngIf="authService.isLoggedIn() && true">Users</a>
+                            <a class="nav-link" routerLink="/users" *ngIf="authService.isLoggedIn() && accessRoles(['ADMIN', 'SUPPORT'])">Users</a>
                         </li>
                     </ul>
                     <!-- Left links -->
