feature description added

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,12 +1,12 @@
 <div class="row mt-5">
-    <div class="col-4 text-center m-auto">
+    <div class="col-4 text-center m-auto text-muted">
         <h2>Welcome</h2>
         <br>
         <h4>Keep track of your todo tasks</h4>
         <hr>
     </div>
 </div>
-<div class="row">
+<!-- <div class="row">
     <div class="col-4 text-center m-auto">
         <p>New user?</p>
         <a class="btn btn-sm btn-primary" routerLink="/signup">Sign up</a>
@@ -16,5 +16,82 @@
         <br><br>
         <p>Forgot password?</p>
         <a class="btn btn-sm btn-warning" routerLink="/request-reset-password">Reset password</a>
+    </div>
+</div> -->
+<div class="row mt-5">
+    <div class="col">
+        <p>The ToDo application is a sample web application to add, edit, or delete a todo task.</p>
+
+        <strong><i>Development Stack</i></strong>
+        <ul>
+            <li>Java programming language</li>
+            <li>Spring Boot Framework</li>
+            <li>Angular Framework</li>
+            <li>Bootstrap</li>
+            <li>Amazon SES, S3, RDS, EC2</li>
+        </ul>
+
+        <strong><i>Data Entities</i></strong>
+        <ul>
+            <li>
+                <strong>Roles</strong>
+                <ul>
+                    <li>ADMIN</li>
+                    <li>SUPPORT</li>
+                    <li>USER</li>
+                </ul>
+            </li>
+            <li>
+                <strong>Users</strong>
+                <ul>
+                    <li>admin1@todo.com</li>
+                    <li>admin2@todo.com</li>
+                    <li>admin3@todo.com</li>
+                    <br>
+                    <li>support1@todo.com</li>
+                    <li>support2@todo.com</li>
+                    <li>support3@todo.com</li>
+                    <br>
+                    <li>user1@todo.com</li>
+                    <li>user2@todo.com</li>
+                    <li>user3@todo.com</li>
+                    <li>user4@todo.com</li>
+                    <li>user5@todo.com</li>
+                </ul>
+            </li>
+            <li>
+                <strong>Passwords</strong>
+                <ul>
+                    For experimental purposes, the password for all the user is <i>password</i>
+                </ul>
+            </li>
+            <li>
+                <strong>Todos</strong>
+                <ul>
+                    <li>
+                        Each user has 10 sample initial todos. Any user can login and view or edit his todos.
+                    </li>
+                </ul>
+            </li>
+        </ul>
+
+        <i><strong>Features</strong></i>
+        <ul>
+            <li>Users can sign up, then they will receive an email to verify their email.</li>
+            <li>Users can login or logout</li>
+            <li>Users can reset their password.</li>
+            <li>Admin users can add/edit a user. In that case user will receive an email containing temp pass.</li>
+            <li>Support users can only view the users.</li>
+        </ul>
+
+
+        <i><strong>GitHub Links</strong></i>
+        <ul>
+            
+        </ul>
+
+        <i><strong>Screenshots</strong></i>
+
+
     </div>
 </div>
