add remianed items

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -69,10 +69,24 @@
                 <strong>Todos</strong>
                 <ul>
                     <li>
-                        Each user has 10 sample initial todos. Any user can login and view or edit his todos.
+                        Above users has 10 sample initial todos.
                     </li>
                 </ul>
             </li>
+            <!-- <li>
+                <strong>Items under development</strong>
+                <ul>
+                    <li>Pagination</li>
+                    <li>Searching</li>
+                    <li>Sorting</li>
+                    <li>Token for reset passwords</li>
+                    <li>Connect github to build processes</li>
+                    <li>Cron job to reset the database entities</li>
+                    <li>Create a profile for dev, tet, prod</li>
+                    <li>Encrypting the sensitive information in app.prop</li>
+                    <li>Unifying the error messages</li>
+                </ul>
+            </li> -->
         </ul>
 
         <i><strong>Features</strong></i>
@@ -80,10 +94,10 @@
             <li>Users can sign up, then they will receive an email to verify their email.</li>
             <li>Users can login or logout</li>
             <li>Users can reset their password.</li>
+            <li>Users can create, edit, or delete a todo task.</li>
             <li>Admin users can add/edit a user. In that case user will receive an email containing temp pass.</li>
             <li>Support users can only view the users.</li>
         </ul>
-
 
         <i><strong>GitHub Links</strong></i>
         <ul>
