changes for future todo

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -85,6 +85,7 @@
                     <li>Create a profile for dev, tet, prod</li>
                     <li>Encrypting the sensitive information in app.prop</li>
                     <li>Unifying the error messages</li>
+                    <li>Developing test cases</li>
                 </ul>
             </li> -->
         </ul>
