--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row mt-5">
     <div class="col-4 text-center m-auto">
-        <h2 class="text-muted">Welcome</h2>
+        <h4 class="text-secondary">Welcome</h4>
         <br>
         <h4>Keep track of your todo tasks</h4>
         <hr>
@@ -86,6 +86,12 @@
                     <li>Encrypting the sensitive information in app.prop</li>
                     <li>Unifying the error messages</li>
                     <li>Developing test cases</li>
+                    <li>Check the user id with the requested user id</li>
+                    <li>Check the permission in Angular to access a route</li>
+                    <li>Sign up cashing guava or captcha</li>
+                    <li>Make sure the subscription is unsubscribed successfully.</li>
+                    <li>Database indexing</li>
+                    <li>Soft delete</li>
                 </ul>
             </li> -->
         </ul>
