--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -4,9 +4,29 @@
         <div *ngIf="errMsg" class="alert-danger text-center">
             {{errMsg}}
         </div>
-        <div class="mb-3">
-            <button class="btn btn-sm btn-primary" (click)="onUserAdd()"><i class="fa fa-plus"></i></button>
+        <div class="row mb-3">
+            <div class="col-6">
+                <button class="btn btn-sm btn-primary" (click)="onUserAdd()"><i class="fa fa-plus"></i></button>
+            </div>
+            <div class="col-2">
+            </div>
+            <div class="col-4">
+                <form class="d-flex" (ngSubmit)="onUserSearch()">
+                  <input class="form-control me-2 input-sm" type="search" 
+                  placeholder="Type email or role" aria-label="Search" 
+                  [ngModel]="needle" name="needle" (ngModelChange)="onSearchInputChange($event)">
+                  <button class="btn btn-outline-success" type="submit" [disabled]="!needle">Search</button>
+                </form>
+              </div>
         </div>
+        <div class="row" *ngIf="searchResultBanner">
+            <div class="col">
+              <div class="alert alert-success" role="alert">
+                <strong>{{searchResultCount}}</strong> user(s) found.
+              </div>
+            </div>
+          </div>
+        <br>
         <table *ngIf="!errMsg" class="table">
             <thead>
                 <tr>
@@ -21,7 +41,6 @@
             </thead>
             <tbody>
                 <tr *ngFor="let user of users; let userNumber = index ">
-                    
                     <th scope="row">{{userNumber + 1}}</th>
                     <td>{{user.username}}</td>
                     <td>
