add todos for the user

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -73,27 +73,29 @@
                     </li>
                 </ul>
             </li>
-            <!-- <li>
+            <li>
                 <strong>Items under development</strong>
                 <ul>
-                    <li>Pagination</li>
-                    <li>Searching</li>
-                    <li>Sorting</li>
+                    <li>Pagination & Sorting</li>
                     <li>Token for reset passwords</li>
                     <li>Connect github to build processes</li>
                     <li>Cron job to reset the database entities</li>
-                    <li>Create a profile for dev, tet, prod</li>
                     <li>Encrypting the sensitive information in app.prop</li>
                     <li>Unifying the error messages</li>
                     <li>Developing test cases</li>
                     <li>Check the user id with the requested user id</li>
                     <li>Check the permission in Angular to access a route</li>
-                    <li>Sign up cashing guava or captcha</li>
+                    <li>Sign up caching guava or captcha</li>
                     <li>Make sure the subscription is unsubscribed successfully.</li>
                     <li>Database indexing</li>
                     <li>Soft delete</li>
+                    <li>Remember me feature</li>
+                    <li>Remove add-todo button for admin</li>
+                    <li>favicon</li>
+                    <li>Refresh token</li>
+                    <li>Replace 4200 with ec2 instance</li>
                 </ul>
-            </li> -->
+            </li> 
         </ul>
 
         <i><strong>Features</strong></i>
