--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -58,6 +58,10 @@
                             <i class="fa fa-pencil text-warning" aria-hidden="true" style="cursor: pointer"
                                 (click)="onUserEdit(user.id)"></i>
                         </span>
+                        <span class="m-2">
+                            <i class="fa fa-list-ol text-info" aria-hidden="true" style="cursor: pointer"
+                                (click)="onUserEdit(user.id)"></i>
+                        </span>
                     </td>
                 </tr>
             </tbody>
